; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/video/extr_bfin-t350mcqb-fb.c_bfin_t350mcqb_irq_error.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/video/extr_bfin-t350mcqb-fb.c_bfin_t350mcqb_irq_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CH_PPI = common dso_local global i32 0, align 4
@IRQ_HANDLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @bfin_t350mcqb_irq_error to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bfin_t350mcqb_irq_error(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %6 = call i64 (...) @bfin_read_PPI_STATUS()
  store i64 %6, i64* %5, align 8
  %7 = call i32 @bfin_write_PPI_STATUS(i32 65535)
  %8 = load i64, i64* %5, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %18

10:                                               ; preds = %2
  %11 = call i32 (...) @bfin_t350mcqb_disable_ppi()
  %12 = load i32, i32* @CH_PPI, align 4
  %13 = call i32 @disable_dma(i32 %12)
  %14 = load i32, i32* @CH_PPI, align 4
  %15 = call i32 @enable_dma(i32 %14)
  %16 = call i32 (...) @bfin_t350mcqb_enable_ppi()
  %17 = call i32 @bfin_write_PPI_STATUS(i32 65535)
  br label %18

18:                                               ; preds = %10, %2
  %19 = load i32, i32* @IRQ_HANDLED, align 4
  ret i32 %19
}

declare dso_local i64 @bfin_read_PPI_STATUS(...) #1

declare dso_local i32 @bfin_write_PPI_STATUS(i32) #1

declare dso_local i32 @bfin_t350mcqb_disable_ppi(...) #1

declare dso_local i32 @disable_dma(i32) #1

declare dso_local i32 @enable_dma(i32) #1

declare dso_local i32 @bfin_t350mcqb_enable_ppi(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
